[package]
name = "psistega3-cli"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A CLI for PsiStega3."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/PsiStega3"
homepage = "https://github.com/sciguyryan/PsiStega3"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.25"
psistega3-core = { path = "../psistega3-core" }
rand = "0.9.0"
rand_core = { version = "0.9.3", features = ["std"] }
rand_chacha = "0.9.0"
rpassword = "7.4.0"
simple_logger = "5.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
