[package]
name = "psistega3-cli"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A CLI for PsiStega3."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/PsiStega3"
homepage = "https://github.com/sciguyryan/PsiStega3"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
crossterm = "0.29.0"
log = "0.4.29"
psistega3-core = { path = "../psistega3-core" }
sha3 = "0.10.8"
rand = "0.9.2"
rand_core = "0.10.0"
rand_chacha = "0.9.0"
rpassword = "7.4.0"
simple_logger = "5.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[[bin]]
name = "psistega3-cli"
path = "src/main.rs"
