[package]
name = "psistega3-cli"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A CLI for PsiStega3."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/PsiStega3"
homepage = "https://github.com/sciguyryan/PsiStega3"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", optional = true }
log = "0.4.33"
psistega3-core = { path = "../psistega3-core" }
sha3 = { version = "0.12.0", optional = true }
rpassword = "7.5.4"
simple_logger = "5.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["secret-fun"]
secret-fun = ["sha3", "crossterm"]

[[bin]]
name = "psistega3-cli"
path = "src/main.rs"
