[package]
name = "psistega3-core"
version = "0.3.1"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
description = "A core crate for PsiStega3."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/PsiStega3"
homepage = "https://github.com/sciguyryan/PsiStega3"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
byteorder = "1.5.0"
crc32fast = "1.5.0"
dirs = "6.0.0"
filetime = "0.2.27"
hashbrown = "0.16.1"
hex-literal = "1.1.0"
image = { version = "0.25.9", features = ["png", "rayon"] }
log = "0.4.29"
memmap2 = "0.9.9"
rand = "0.9.2"
rand_core = "0.9.5"
rand_xoshiro = "0.7.0"
sha3 = "0.10.8"
simple_logger = "5.1.0"
zeroize = "1.8.2"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
path-absolutize = "3.1.1"

[features]
bench = []

[[bench]]
name = "stega_benchmark"
harness = false
required-features = ["bench"]

[[bin]]
name = "generate_reference_images"
path = "benches/generate_reference_images.rs"
required-features = ["bench"]